--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>ALAB DOM Manipulation</title>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
   </head>
 
@@ -12,6 +11,6 @@
     </header>
     <main></main>
 
-    <script src="script.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
