--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <title>ALAB DOM Manipulation</title>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
   </head>
 
   <body>
     <header>
       <nav id="top-menu"></nav>
+      <nav id="sub-menu"></nav>
     </header>
     <main></main>
 
-    <script src="src/index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
